Start commenting on revised draft

--- a/Manus.Rmd
+++ b/Manus.Rmd
@@ -10,13 +10,13 @@ output: pdf_document
 
 Introduction 
 ============
-Trauma is a global health problem and the total number of patients with trauma is at least 520 million per year [@James2020]. In 2017 trauma accounted for 13% of total disability adjusted life years lost and 8% of total deaths globally with the majority of the burden being on low and middle income countries [@GBD2017DALY;@Mock2012]. Most deaths from trauma occur shortly after the injury and reducing mortality in patients with severe trauma requires early intervention, often surgical, as by the “golden hour” concept. This is often due to extensive bleeding where surgery is an important part of the hemorrhage control [@King2019]. Furthermore, depending on the severity and type of trauma, patients often need intensive care after a traumatic injury in order to maintain adequate physiological functions. <!-- Add something here on the need for care in the ICU for trauma patients-->
+Trauma is a global health problem affecting at least 520 million people per year [@James2020]. Trauma accounts for 13% of total disability adjusted life years lost and 8% of deaths globally with the majority in low and middle income countries [@GBD2017DALY;@Mock2012]. Most deaths from trauma occur shortly after the injury and reducing mortality in patients with severe trauma requires early intervention, often due to extensive bleeding for which surgery is vital for hemorrhage control [@King2019]. After severe trauma patients often need to be managed in the intensive care unit (ICU) to maintain adequate physiological functions. <!-- Add something here on the need for care in the ICU for trauma patients-->
 
-Because of the urgency and complexity of trauma care it is important to early assess the trauma severity to guide further management, including the need for care in the ICU. Several trauma severity scores have been developed for this purpose, of which the Revised Trauma Score (RTS) is the most well known [@Champion1989]. The RTS includes Glasgow come scale (GCS), systolic blood pressure (SBP) and respiratory rate (RR), and is rated 0-4 points on each parameter. Because of the multiple cutoffs involved for each parameter the RTS can be too complex for routine use, especially in low resource settings with high trauma loads.
+Because of the urgency and complexity of trauma care it is important to early assess trauma severity to guide further management, including the need for care in the ICU. Several trauma severity scores have been developed for this purpose, of which the Revised Trauma Score (RTS) is the most well known [@Champion1989]. The RTS includes Glasgow come scale (GCS), systolic blood pressure (SBP) and respiratory rate (RR), and is rated 0-4 points on each parameter. Because of the multiple cutoffs involved for each parameter the RTS can be too complex for routine use, especially in low resource settings with high trauma loads.
 
-The quick Sequential Organ Failure Assessment score (qSOFA score) was developed in 2016 and includes the same variables as RTS but with just one cutoff for each parameter. It was introduced as a screening tool coupled with the already existing Sequential Organ Failure Assessment score (SOFA score). The qSOFA score was meant to be used bedside to identify patients with high-risk of organ dysfunction due to infections [@David2017;@Shankar2016] and the SOFA score to more precisely evaluate the level of organ dysfunction [@Lambden2019]. However the qSOFA score has lately been to be able to predict mortality in trauma patients [@Miyamoto2019; @Miyamoto2020]. 
+The quick Sequential Organ Failure Assessment score (qSOFA score) was developed in 2016 and includes the same variables as RTS but with just one cutoff for each parameter. It was introduced as a screening tool coupled with the already existing Sequential Organ Failure Assessment score (SOFA score). The qSOFA score was meant to be used bedside to identify patients with high-risk of organ dysfunction due to infections [@David2017;@Shankar2016] and the SOFA score to more precisely evaluate the level of organ dysfunction [@Lambden2019]. The qSOFA score has lately been to be able to predict mortality in trauma patients [@Miyamoto2019; @Miyamoto2020]. 
 
-The majority of the research done on the topic of trauma and trauma care has been performed in high income counties and has studied the predictive power on mortality. Since low resource settings are disproportionately affected by trauma and often have limited resources it can be argued that a simple scoring system to help prioritize resources such as ICU beds would of great use. For this we chose qSOFA as it is easy to perform and due to its singular cutoffs is easy to calculate. In this paper out aim was to asses the validity of qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting and to investigate whether the qSOFA model could be updated to increase its performance. 
+The majority of the research done on trauma and trauma care is from high income counties and has studied the predictive power<!-- Of qSOFA?--> on mortality. Because low resource settings are disproportionately affected by trauma and and have limited resources a simple scoring system, such as qSOFA, to help prioritize resources such as ICU beds is important. For this we chose qSOFA as it is easy to perform and due to its singular cutoffs is easy to calculate. In this paper out aim was to asses the validity of qSOFA in predicting ICU admission in trauma patients admitted to hospitals in a low resource setting and to investigate whether the qSOFA model could be updated to increase its performance. 
 
 
 Methods
