--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,6 +14,8 @@ year = {2011}
 }
 
 
+
+
 @article{GBD2017DALY,
 abstract = { Background: How long one lives, how many years of life are spent in good and poor health, and how the population's state of health and leading causes of disability change over time all have implications for policy, planning, and provision of services. We comparatively assessed the patterns and trends of healthy life expectancy (HALE), which quantifies the number of years of life expected to be lived in good health, and the complementary measure of disability-adjusted life-years (DALYs), a composite measure of disease burden capturing both premature mortality and prevalence and severity of ill health, for 359 diseases and injuries for 195 countries and territories over the past 28 years.
 
@@ -342,10 +344,9 @@ year = {2016}
 }
 
 <!--
-1.	National Library of Medicine. Medical Search Headings (MeSH). https://meshb-nlm-nih-gov.proxy.kib.ki.se/record/ui?ui=D014947 [accessed 4 October 2020].
-
-
-14.	(2016).  , 43(5), 334–340.
 
 15.	TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]
 --->
+
+\bibitem{TITCO}
+TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]
