--- a/Manus.Rmd
+++ b/Manus.Rmd
@@ -1,11 +1,13 @@
 ---
-title: The Title of Your Study Here
-subtitle: Add a Subtitle if Needed
-author: Björn Lindberg
+title: Predicting intensive care unit admission in trauma patients in India using the quick sequential organ failure assessment score (qSOFA) 
+
+author: BjÖrn Lindberg
 bibliography: bibliography.bib
 csl: bmcemerg.csl
 output: pdf_document
 ---
+
+<!-- subtitle: Add a Subtitle if Needed --> 
 
 Introduction 
 ============
@@ -97,8 +99,8 @@ representing the presence or absence of ICU admission.
 
 The predictors used in qSOFA are RR, GCS and SBP. Data on these predictors were
 collected on arrival to hospital. In the original qSOFA these predictors were
-dichotomized using the cutoffs ≥ 22 for respiratory rate, ≤ 15 for the Glasgow
-coma scale, and ≤ 100 for systolic blood pressure. Using these dichotomized
+dichotomized using the cutoffs higher than or equal to 22 for respiratory rate, less than 15 for the Glasgow
+coma scale, and less than 100 for systolic blood pressure. Using these dichotomized
 predictors qSOFA can be expressed as either a model, in which the coefficients
 associated with each predictor are used to estimate patient specific
 probabilities of the outcome, or a score equal to the sum of the dichotomized
@@ -115,7 +117,7 @@ A complete case analysis was conducted.
 
 
 ## Statistical analysis methods
-We used R for all statistical analyses [@Rstudio]. We described the sample
+We used R for all statistical analyses <!--[@Rstudio]-->. We described the sample
 characteristics using counts and percentages for qualitative variables and mean
 and standard deviations (SD) for quantitative variables. We use model to denote
 the combination of predictor values and coefficients that can be used to
@@ -166,14 +168,14 @@ The TITCO cohort included `r results$n.cohort` patients (Figure 1). We excluded
 `r  results$n.incl2 ` patients because they died between arrival and admission.
 Patients with on arrival externally controlled breathing, such as intubation or
 surgical airway, were also excluded accounting for
-`r esults$n.intub.or.saw.before.arrival` patients. We further excluded
+`r results$n.intub.or.saw.before.arrival` patients. We further excluded
 `r results$n.NA_TOT` patients due to missing data in either admission to the ICU
 (`r results$n.NA_ICU`), systolic blood pressure (`r results$n.NA_SBP`),
 respiratory rate (`r results$n.NA_RR`), or GCS (`r results$n.NA_GCS`). The final
 sample included `r results$n.complete` patients. 
 
-```{r figure1, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart showing the exclussion criteria andthe number of study participants. /n *Externally controlled breathing includes intubation orsurgical airway before arrival to a participating hospital", echo = FALSE}
-knitr::include_graphics("figure1.svg")
+```{r figone, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart showing the exclussion criteria andthe number of study participants. /n *Externally controlled breathing includes intubation orsurgical airway before arrival to a participating hospital", echo = FALSE}
+knitr::include_graphics("figone.png")
 ```
 
 The mean age was `r round(tabOne$ContTable$Overall["Age","mean"],2)` with
@@ -218,10 +220,10 @@ level given the OR from Table 2 is presented in Table 3 and 4 for the original
 and the updated models respectively. The presented ORs are weighted according to
 the distribution of the individual parameter scores for each total score as
 present in the study population. For the original model, the probability ranges
-from `r round(CIs$est.prob.sum.org.none,2)*100 `% to
-`r round(CIs$est.prob.sum.org.three,2)*100 `% and for the updated model, the
-predicted probability ranges from `r round(CIs$est.prob.sum.new.none,2)*100 `%
-to `r round(CIs$est.prob.sum.new.three,2)*100 `% for a score of 0-3.  
+from `r round(as.numeric(CIs$est.prob.sum.org.none),2)*100 `% to
+`r round(as.numeric(CIs$est.prob.sum.org.three,2))*100 `% and for the updated model, the
+predicted probability ranges from `r round(as.numeric(CIs$est.prob.sum.new.none,2))*100 `%
+to `r round(as.numeric(CIs$est.prob.sum.new.three,2))*100 `% for a score of 0-3.  
 
 | Original score | Estimated probability of ICU admission(95%CI) | Odds ratio(95% CI)          |
 |-----------------|-----------------------------------------------|-----------------------------|
@@ -244,7 +246,6 @@ probabilities for the new and updated model and table 5 compares the performance
 in terms of Integrated calibration index (ICI) and Area under the curve (AUC)
 for the receiver operating characteristics for the original and updated model.
 
-Figures: 
 ```{r ICIorg, echo = FALSE}
 plot(est.sum.org, obs.sum.org, xlim=c(0,1), ylim=c(0,1),main= "Original qSOFA score", xlab= "Predicted probability", ylab="Observed probability" )
 lines(c(0,1),c(0,1))
@@ -293,7 +294,7 @@ deteriorated.
 
 In contrast, with our updated qSOFA for predicting ICU admission in trauma
 patients a low score of 0-1 corresponded to a probability for ICU admission of
-`r boot.cis$est.prob.sum.new.none[["pe"]]\`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and
+`r boot.cis$est.prob.sum.new.none[["pe"]]`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and
 a high score of 2-3 corresponded to a probability of
 `r boot.cis$est.prob.sum.new.two[["pe"]]`-`r boot.cis$est.prob.sum.new.three[["pe"]]`
 %. This shows that regardless of the score the patients still have a relatively
@@ -367,6 +368,7 @@ excluding them from this study. It is unknown if this had any effect on this
 study and for more certain result more research is needed.
 
 ##Conclusion
+
 This study indicates that qSOFA should not be used to predict ICU admission in
 trauma patients in this context. Although an updated qSOFA score can be used 
 to estimate the overall risk for ICU admission in trauma patients in urban
