--- a/bibliography.bib
+++ b/bibliography.bib
@@ -163,14 +163,14 @@ year = {2016}
 
 
 
-@Manual{RStudio,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2020},
-    url = {https://www.R-project.org/},
-  }
+@article{RStudio,
+title = {R: A Language and Environment for Statistical Computing},
+author = {{R Core Team}},
+organization = {R Foundation for Statistical Computing},
+address = {Vienna, Austria},
+year = {2020},
+url = {https://www.R-project.org/},
+}
 
 
 
@@ -343,10 +343,7 @@ volume = {43},
 year = {2016}
 }
 
-<!--
 
-15.	TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]
---->
-
-\bibitem{TITCO}
-TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]
+@article{TITCO,
+title = {{TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]}},
+}
